xee-xpath-compiler/tests/snapshots/xpath__if_false.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"if (0) then 2 else 3\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    3,
                ),
            ),
        ),
    },
)
