xee-xpath-compiler/tests/snapshots/xpath__local_name_empty.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:local-name(())\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "",
                ),
            ),
        ),
    },
)
