xee-xpath-compiler/tests/snapshots/xpath__nested_for_loop_variable_scope.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"for $i in (10, 20), $j in ($i + 1, $i + 2) return $i + $j\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        21,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        22,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        41,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        42,
                    ),
                ),
            ],
        ),
    },
)
