xee-xpath-compiler/tests/snapshots/xpath__predicate_index2.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2, 3)[2] + (4, 5)[1]\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    6,
                ),
            ),
        ),
    },
)
