xee-xpath-compiler/tests/snapshots/xpath__predicate_index_all.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2, 3)[fn:position()]\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        1,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        2,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        3,
                    ),
                ),
            ],
        ),
    },
)
