xee-xpath-compiler/tests/snapshots/xpath__qname_without_prefix.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"QName('http://example.com', 'foo')\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                QName(
                    OwnedName {
                        local_name_str: "foo",
                        namespace_str: "http://example.com",
                        prefix_str: "",
                    },
                ),
            ),
        ),
    },
)
