xee-xpath-compiler/tests/snapshots/xpath__run_focus_independent_function_on_focus.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a/></doc>\"#, \"doc/a/default-collation()\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "http://www.w3.org/2005/xpath-functions/collation/codepoint",
                ),
            ),
        ),
    },
)
